Fix list grammar. Improve last paragraph of visual stimuli section

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -5,6 +5,7 @@
 \usepackage{tablefootnote}				% add footnotes to tables
 \usepackage{subcaption}					% for subfigures
 %\usepackage{mathtools}					% for curly braces under equation. Also includes amsmath.
+%\include{enumitem}						% for alphabetical enumerate or inline list.
 
 \usepackage[nogroupskip]{glossaries}	% for acronyms
 \renewcommand{\glossarysection}[2][]{}	% no title for glossary
