Changes left out from previous commit.

--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -50,6 +50,8 @@ The flickering of a target can be divided in three categories. If the refresh ra
 
 If the monitor refresh rate is 60 Hz, then the flickering of 10 Hz corresponds to case~a, 12 Hz corresponds to case~b and 11 Hz corresponds to case~c. Although the 11 Hz flickering produces irregular flickering \cite{11hz}, it is still possible to detect \gls{SSVEP} elicited by it in the Emotiv EPOC recording~\cite{emotiv_11hz}.
 
+%In conclusion, the visual stimuli used in \gls{VEP}-based \gls{BCI} can be produced by a computer monitor and the synchronisation of the flickering can be based on refresh rate.
+
 \begin{figure}[h!]
 	\centering
 	\begin{subfigure}{\textwidth}
