--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -1,5 +1,5 @@
 
-\chapter{VEP-based Brain-Computer Interface}
+\chapter{VEP-based brain-computer interface}
 
 The previous chapter discussed the biology of the human brain and described the brain potential called \gls{SSVEP}. The aim of this chapter is to describe which kind of visual stimuli can be used to elicit \gls{SSVEP} and how to detect \gls{SSVEP} in a \gls{EEG} recording. This knowledge is needed to extract information from the \gls{EEG} recording and use this information to control a robot. In other words, this chapter will discuss how to implement a \gls{VEP}-based \gls{BCI}.
 
