--- a/thesis/tex/abstract.tex
+++ b/thesis/tex/abstract.tex
@@ -1,5 +1,5 @@
 
-\chapter*{Control a robot via VEP using Emotiv EPOC}
+\chapter*{Control a Robot via VEP Using Emotiv EPOC}
 \section*{Abstract}
 \section*{Keywords}
 \normalsize{EEG, BCI, f-VEP, SSVEP, CCA, PSDA, FFT, DFT, electroencephalography}
