--- a/thesis/tex/appendices.tex
+++ b/thesis/tex/appendices.tex
@@ -5,6 +5,9 @@
 \renewcommand{\thechapter}{\Roman{chapter}}
 \chapter{Glossary}
 \printglossary
+\printglossary[type=\acronymtype]
+%\listoffigures
+%\listoftables
 \chapter{Licence}
 \textbf{Non-exclusive licence to reproduce thesis and make thesis public}\\[1cm]
 
