--- a/thesis/tex/title_page.tex
+++ b/thesis/tex/title_page.tex
@@ -10,13 +10,13 @@
 \vspace{160pt}
 \Large{\bf Anti Ingel}\\
 \vspace{6pt}
-\LARGE{\textbf{Control a robot via VEP using \\Emotiv EPOC}}\\
+\LARGE{\textbf{Control a Robot via VEP Using \\Emotiv EPOC}}\\
 \vspace{12pt}
-\large{\bf Bachelor's thesis}
+\large{\bf Bachelor's Thesis (9 ECTS)}
 \vspace{63pt}
 \end{center}
 \hfill \Large{Supervisor: Ilya Kuzovkin}
 \vfill
 \begin{center}
-\normalsize{Tartu 2015}
+\large{Tartu 2015}
 \end{center}
