--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -22,6 +22,23 @@
 \newacronym{LRT}{LRT}{likelihood ratio test}
 \newacronym{MPCC}{MCPP}{multi-phase cycle coding}
 
+\newglossaryentry{neuron}{
+	name = neuron,
+	description = {-- nerve cell}
+}
+\newglossaryentry{dendrite}{
+	name = dendrite,
+	description = {-- nerve ending}
+}
+\newglossaryentry{axon}{
+	name = axon,
+	description = {-- nerve fibre}
+}
+\newglossaryentry{synapse}{
+	name = synapse,
+	description = {-- connection between neurons}
+}
+
 % Packages for layout testing
 
 %\usepackage{showframe}
